add update tasks of Lesson17